# perplexity-company-scraper

./: .env.example  .gitignore  README.md  config.toml  demo.py  handlers.py  main.py  ppl_scrapper.py  prompts.yaml  pyproject.toml  requirements.txt  scraper.py  test_setup.py  utils.py
data/: companies.csv
data/input/: companies.csv
notebooks/: playground.ipynb
