[project]
name = "perplexity-company-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "instructor[perplexity]>=1.11.3",
    "ipython>=8.18.1",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
]
